[gd_scene load_steps=3 format=3 uid="uid://bqxvhqxqxqxq0"]

[ext_resource type="Script" path="res://game/ui/TurnIndicator.gd" id="1_1"]

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 24
font_color = Color(1, 1, 1, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_2"]
font_size = 16
font_color = Color(0.9, 0.9, 0.9, 1)
outline_size = 1
outline_color = Color(0, 0, 0, 1)

[node name="TurnIndicator" type="Control"]
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 100.0
script = ExtResource("1_1")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="PlayerNameLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Player 1's Turn"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1

[node name="TurnInfoLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Turn 1 - 3 units remaining"
label_settings = SubResource("LabelSettings_2")
horizontal_alignment = 1

[node name="TransitionLabel" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Player 1 â†’ Player 2"
label_settings = SubResource("LabelSettings_1")
horizontal_alignment = 1
visible = false